--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,9 @@ tiktoken>=0.6.0
 pypdf>=4.0.0
 httpx>=0.27.0
 python-multipart>=0.0.9
+python-multipart>=0.0.9
 scikit-learn>=1.4.0
+psycopg2-binary>=2.9.9
+pgvector>=0.2.5
+redis>=5.0.0
+
