--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "theultimaterag"
+name = "ultimaterag"
 version = "0.1.1"
 description = "A modular, production-ready Retrieval-Augmented Generation (RAG) platform with multi-vector database support"
 readme = "PYPI.md"
@@ -60,7 +60,8 @@ dependencies = [
   "tiktoken>=0.6.0",
 
   "pypdf>=4.0.0",
-  "scikit-learn>=1.4.0"
+  "scikit-learn>=1.4.0",
+  "typer>=0.9.0"
 ]
 
 [project.urls]
@@ -78,4 +79,4 @@ dev = [
 ]
 
 [project.scripts]
-theultimaterag = "theultimaterag.server:start"
+ultimaterag = "ultimaterag.cli:main"
